--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       <version>1.3.2</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>javax.faces</groupId>
       <artifactId>jsf-api</artifactId>
       <version>${jsf.version}</version>
@@ -46,18 +51,18 @@
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>${jstl.version}</version>
-      <scope>provided</scope>
+
     </dependency>
     <dependency>
       <groupId>javax.faces</groupId>
       <artifactId>jsf-impl</artifactId>
       <version>${jsf.version}</version>
-      <scope>provided</scope>
+
     </dependency>
-    <dependency>
+   <!-- <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-thymeleaf</artifactId>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-tomcat</artifactId>
@@ -67,6 +72,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
     </dependency>
 
     <dependency>
@@ -95,7 +104,48 @@
     </dependency>-->
   </dependencies>
 
+  <repositories>
+    <repository>
+      <id>spring-snapshots</id>
+      <url>http://repo.spring.io/snapshot</url>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+    <repository>
+      <id>spring-milestones</id>
+      <url>http://repo.spring.io/milestone</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>spring-snapshots</id>
+      <url>http://repo.spring.io/snapshot</url>
+    </pluginRepository>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <url>http://repo.spring.io/milestone</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <build>
+
+
+    <resources>
+      <resource>
+        <directory>src/main/java</directory><!--java文件的路径-->
+        <includes>
+          <include>**/*.*</include>
+        </includes>
+        <!-- <filtering>false</filtering>-->
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory><!--资源文件的路径-->
+        <includes>
+          <include>**/*.*</include>
+        </includes>
+        <!-- <filtering>false</filtering>-->
+      </resource>
+    </resources>
+
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
