--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,22 +37,7 @@ mybatis.type-aliases-package=com.example.demomybatis.model
 
 
 
-# Enable template caching.
-spring.thymeleaf.cache=false 
-# Check that the templates location exists.
-spring.thymeleaf.check-template-location=true 
-# Content-Type value.
-spring.thymeleaf.servlet.content-type=text/html 
-# Enable MVC Thymeleaf view resolution.
-spring.thymeleaf.enabled=true
-spring.thymeleaf.encoding=UTF-8
-# Comma-separated list of view names that should be excluded from resolution.
-spring.thymeleaf.excluded-view-names=
-# Template mode to be applied to templates. See also StandardTemplateModeHandlers.
-spring.thymeleaf.mode=HTML5 
-# Prefix that gets prepended to view names when building a URL.
-spring.thymeleaf.prefix=classpath:/templates/ 
-# Suffix that gets appended to view names when building a URL.
-spring.thymeleaf.suffix=.html
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
-
+spring.mvc.view.prefix=/WEB-INF/jsp/
